--- a/how-does-angular-work/src/styles.css
+++ b/how-does-angular-work/src/styles.css
@@ -1,1 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
+.bordered{
+    border: 1px dashed black;
+    background-color: #eee;
+}
