Custom validation has been finished

--- a/our-first-form/src/app/demo-form-with-validations-explicit/demo-form-with-validations-explicit.component.html
+++ b/our-first-form/src/app/demo-form-with-validations-explicit/demo-form-with-validations-explicit.component.html
@@ -4,16 +4,17 @@
     [class.error]="!myForm.valid && myForm.touched"
     >
 
-    <div class="field" [class.error]="!sku.valid && sku.touched">
+    <div class="field" [class.error]="!myForm.controls['sku'].valid && myForm.controls['sku'].touched">
         <label for="skuInput">SKU: </label>
         <input type="text"
                 id="skuInput"
                 placeholder="SKU"
-                [formControl]="sku"
+                [formControl]="myForm.controls['sku']"
         > <br><br>
-        <div *ngIf="!sku.valid">SKU is invalid</div>
-        <div *ngIf="sku.hasError('required')">SKU is required.</div>
+        <div *ngIf="!myForm.controls['sku'].valid">SKU is invalid</div>
+        <div *ngIf="myForm.controls['sku'].hasError('required')">SKU is required.</div>
         <div *ngIf="!myForm.valid">Form is invalid</div>
+        <div *ngIf="myForm.controls['sku'].hasError('invalidSku')">SKU must being with <span>123</span></div>
     </div> <br><br>
 
     <button type="submit">Submit</button>
