--- a/our-first-form/src/app/app.component.html
+++ b/our-first-form/src/app/app.component.html
@@ -1,3 +1,4 @@
 <app-demo-form-sku></app-demo-form-sku> <br>
 <app-demo-form-sku-with-builder></app-demo-form-sku-with-builder>
 <app-demo-form-with-validations-explicit></app-demo-form-with-validations-explicit>
+<app-demo-form-ng-model></app-demo-form-ng-model>
